Fix page shifting of Collections in Safari

--- a/app/assets/css/base/mixins.scss
+++ b/app/assets/css/base/mixins.scss
@@ -11,10 +11,10 @@ $base-path: '../../' !default;
 $default-z-index: 0;
 $story-book-background-layer-z-index: 0;
 $story-book-background-figure-z-index: 1;
-$story-book-background-filter-z-index: 40;
+$story-book-background-video-z-index: 2;
+$story-book-background-filter-z-index: 3;
 $story-book-content-layer-z-index: 10;
 $story-book-overlay-layer-z-index: 20;
-$story-book-video-z-index: 30;
 $story-book-nav-z-index: 40;
 $header-z-index: 100;
 $preloader-z-index: 110;
